--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -353,7 +353,7 @@
     <p style="color:#666;font-size:14px;margin-top:6px">
       We respond to all privacy inquiries within 48 hours.
     </p>
-    <a href="mailto:support@cyclesync.app">support@cyclesync.app</a>
+    <a href="mailto:support@cyclesync.app">3dpeektech@consultant.com</a>
     <p style="margin-top:16px;font-size:13px;color:#aaa">
       CycleSync · moroccoboy1990@gmail.com
     </p>
